# linkedsemi_zephyr_project

./: README.md  west.yml
samples/adc/adc_mutil_channel/: sample.yaml
samples/adc/adc_single_channel/: README.rst  prj.conf  sample.yaml
samples/alipsu/: CMakeLists.txt  Kconfig  prj.conf
samples/alipsu/boards/: alipsu.overlay
samples/alipsu/src/: main.c
samples/alipsu_sensor/: CMakeLists.txt
samples/alipsu_sensor/boards/: alipsu.overlay
samples/alipsu_sensor/src/: main.c
samples/bhs_bmc_ready_shell_module/boards/: lsqsh_evb_cpu1.conf
samples/bhs_bmc_ready_shell_module/src/: main.c
samples/bhs_espi_peci/boards/: lsqsh_evb_cpu1.conf  lsqsh_evb_cpu1.overlay
samples/bhs_espi_peci/src/: bhs.c  main.c  peci.c
samples/cpp/exception_pthread/: CMakeLists.txt  prj.conf
samples/cpp/exception_pthread/src/: main.cpp
samples/cpp/hello_world_malloc/: CMakeLists.txt  prj.conf  prj_common_libc.conf
samples/crypto_sw_hw_alignment_test/: CMakeLists.txt  README.rst  prj.conf  wolfssl_user_settings_nofs.h
samples/devfs/: CMakeLists.txt  prj.conf
samples/dwc3_host/: CMakeLists.txt  prj.conf
samples/echoserver/: CMakeLists.txt  echoserver.c  prj.conf  prj_nofs.conf  wolfssh_user_settings.h  wolfssh_user_settings_nofs.h
samples/emmc_coredump/: CMakeLists.txt  README  README.md  lsqsh_evb_cpu1_1os.overlay  prj.conf
samples/fs_sample_flash/: prj.conf
samples/fs_sample_perf/: CMakeLists.txt  prj.conf
samples/fstack_protector/: CMakeLists.txt
samples/fstack_protector_sdk/: CMakeLists.txt
samples/func_io_lock/: prj.conf
samples/gpio_fs/: CMakeLists.txt  prj.conf
samples/hash_sha224/: Kconfig  prj.conf
samples/https_server/: CMakeLists.txt
samples/https_server_post/: CMakeLists.txt  prj.conf
samples/i2c_test/: prj.conf
samples/i3c_i2c_exchange/: CMakeLists.txt  prj.conf
samples/i3c_test/: CMakeLists.txt  prj.conf
samples/i3c_test_i2c_master/: prj.conf
samples/iopmp_dt/: prj.conf
samples/ipmi_61/: CMakeLists.txt  prj.conf
samples/ipmi_61/src/: main.c
samples/ipmi_61/src/ipmb/: ipmb.c  ipmb.h
samples/ipmi_61/src/ipmi/: app_handler.c  ipmi.c
samples/ipmi_61/src/ipmi/include/: app_handler.h
samples/ipmi_61/src/lib/: libutil.c
samples/ipmi_61/src/pal/ipmi/: plat_ipmi.c
samples/ipmi_openbic/: CMakeLists.txt  Kconfig  prj_avenue_city.conf
samples/ipmi_openbic/src/: main.c
samples/ipmi_openbic/src/ipmi/: app_handler.c  chassis_handler.c  ipmi.c
samples/ipmi_openbic/src/ipmi/include/: chassis_handler.h  ipmi.h
samples/ipmi_openbic/src/kcs/: kcs.h
samples/ipmi_openbic/src/lib/: libutil.c  libutil.h  power_status.c
samples/ipmi_openbic/src/pal/ipmi/: plat_ipmi.c
samples/ipmi_openbic/src/pal/ipmi/include/: plat_ipmi.h
samples/jtag_asd/: CMakeLists.txt  prj.conf
samples/jtag_master/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/jtag_master_fs/: CMakeLists.txt  prj.conf
samples/mac/src/: eth.h  (+1 more)
samples/mbedtls_selftest/: CMakeLists.txt  prj.conf
samples/mbedtls_test/: CMakeLists.txt  README  prj.conf
samples/mbox_data_multi_channel_multi_msg/: CMakeLists.txt
samples/mcp2221/: Kconfig  README.rst  lsqsh_evb_cpu1.overlay  main.py  prj.conf  usbd_fs.overlay  usbd_hs.overlay
samples/mdio/: prj.conf
samples/mmc_cpu1/: CMakeLists.txt  main_loop.c  main_one.c
samples/mp5023/: CMakeLists.txt  prj.conf
samples/mp5023/boards/: mp5023.overlay
samples/mp5023/src/: main.c
samples/reboot/: prj.conf
samples/rtc_ins5710c/: CMakeLists.txt  prj.conf
samples/rtc_ls/: CMakeLists.txt  prj.conf
samples/smp_flash_test/: CMakeLists.txt  lsqsh_evb_smp_smp_xip.overlay  prj.conf
samples/smp_flash_test/src/: main.c
samples/spi_flash_communication/: README.rst  prj.conf
samples/spi_flash_communication_spi1/: README.rst
samples/spi_ls_flash_nor/: CMakeLists.txt  README.rst  prj.conf
samples/telnet_reinit/: prj.conf
samples/test_cap/: CMakeLists.txt  prj.conf
samples/test_pwm/: CMakeLists.txt  prj.conf
samples/tlsf_malloc_testcase/: CMakeLists.txt  prj.conf
samples/trng_test/: CMakeLists.txt  prj.conf
samples/usb_acm_agent/: README.rst
samples/usb_multi_instance/: CMakeLists.txt  app.overlay  prj.conf
samples/user_mode_thread/: README.rst  prj.conf
samples/virtual_media/: CMakeLists.txt  Kconfig  prj.conf  vmdisk.overlay
samples/wdt_cpu1_reset_cpu2/: main copy.c
samples/wolfssh_server/: CMakeLists.txt  Kconfig  echoserver.c  prj_nofs.conf  wolfssh_user_settings_nofs.h  wolfssl_user_settings_nofs.h
samples/wolfssl_hw_throughput_rate/: CMakeLists.txt  README.rst  prj.conf  sample.yaml  wolfssl_user_settings_nofs.h
samples/zperf/: CMakeLists.txt  prj.conf
zephyr/: module.yml
(+196 files in other folders)
